Signed-off-by: Ge-yuan-jun <daydaygyj@gmail.com>

--- a/source/widget/UserHome.learning/study-course.less
+++ b/source/widget/UserHome.learning/study-course.less
@@ -345,6 +345,9 @@
         height: 780px;
         overflow: auto;
     }
+    .modal-content{
+        background-color: #fff;
+    }
 }
 #chapterTestResult{
     .modal-body{
