顶部用户昵称限制字数

--- a/source/widget/Public.Topbar/topbar.less
+++ b/source/widget/Public.Topbar/topbar.less
@@ -99,7 +99,15 @@
         width: 1190px;
         margin: 0 auto;
         .topleft-bar {
-            width: 350px;
+            width: 450px;
+            li:nth-child(1){
+                em.text-danger {
+                    max-width: 270px;
+                    height: 30px;
+                    overflow: hidden;
+                    float: left;
+                }
+            }
         }
         .topright-bar {
             width: 730px;
