--- a/source/widget/UM.address/ui-address.less
+++ b/source/widget/UM.address/ui-address.less
@@ -33,7 +33,14 @@
 			.addr_detail {
 				float: left;display: inline;line-height: 40px;
 				span {
-					display: inline-block;padding-left: 20px;
+                    float: left;
+					display: inline;
+                    height: 40px;
+                    padding-left: 20px;
+                    overflow: hidden;
+                    &.addr_name {width: 100px;}
+                    &.addr_info {width:300px;}
+                    &.default_addr {margin-top:8px;}
 				}
 				.default_addr {
 					display: inline-block;
