课程列表更改

--- a/source/widget/Public.Module/courses.less
+++ b/source/widget/Public.Module/courses.less
@@ -826,6 +826,9 @@ ul,li{list-style: none;}
 			width: 150px;
 			height: 36px;
 			text-indent: -99999px;
+			&:focus{
+				outline: none;
+			}
 		}
 	}
 }
