--- a/source/widget/UserHome.courses/courseStudycenter.less
+++ b/source/widget/UserHome.courses/courseStudycenter.less
@@ -169,15 +169,20 @@ body{
 		overflow: hidden;
 		padding: 0 0px 0 10px;
 		.course-center{
-			min-width: 587px;
+			width: 69%;
 		}
 		.course-title{
 			font-size: 16px;
 			line-height: 18px;
 			margin-bottom: 8px;
 			font-family: 'Microsoft YaHei';
+			overflow: hidden;
 			span{
 				color: #999;
+			}
+			.course-title-inner{
+				width: 92%;
+				float: left;
 			}
 			.title-detail-gray{
 				color: #999;
