绑定手机号

--- a/source/widget/UM.mobile.phone/mobile.phone.less
+++ b/source/widget/UM.mobile.phone/mobile.phone.less
@@ -44,11 +44,18 @@
     .error-box{
         display: block;
         clear: both;  
-        width: 288px;
         height: 30px;
         margin: 1px 0 0 65px;
         padding-top: 5px;
         line-height:19px;
+        .phonetext{
+            position: relative;
+            left: 10px;
+            padding-left: 0;
+            width: 300px;
+            background:none;
+            color:#828282;
+        }
         .error{
             display: none;
             color: #e74c3c;
