--- a/source/widget/Public.Module/courses.less
+++ b/source/widget/Public.Module/courses.less
@@ -575,12 +575,11 @@ ul,li{list-style: none;}
 }
 // 老师头像页卡
 .teacher-bomb {
-	height: 266px;
 	width: 375px;
 	border: none;
 	padding: 0;
 	ul{
-		padding-left: 0;
+		padding-left: 0 0 10px 0;
 	}
 	.dialog-second {
 		height: 155px;
@@ -726,7 +725,7 @@ ul,li{list-style: none;}
 		text-align: center;
 		.for-center {
 			display: inline-block;
-			padding-top: 10px;
+			padding-top: 15px;
 			.fresh-course-attention{
 				float: left;
 				line-height: 20px;
