--- a/source/widget/UserHome.courses/courseStudycenter.less
+++ b/source/widget/UserHome.courses/courseStudycenter.less
@@ -655,7 +655,7 @@ table tr.even, table tr.alt, table tr:nth-of-type(2n){
 			span.span-w2{
 				width: 42%;
 				float: left;
-				text-align: left;
+				// text-align: left;
 				.studied-end{
 					width: 57px;
 					float: none;
