--- a/source/widget/UserHome.perfection/perfect-information.less
+++ b/source/widget/UserHome.perfection/perfect-information.less
@@ -163,10 +163,10 @@
 			}
 			.errTips {
 				color: #cc0000;
-				height: 20px;
+				height: 28px;
 				display: inline-block;
 				font-size: 12px;
-				line-height: 20px;
+				line-height: 28px;
 			}
 			.gender-1 {
 				background: url("img/man.png") no-repeat scroll center top;
@@ -219,6 +219,9 @@
 			padding: 0 18px;
 			margin-bottom: 0;
 		}
+		#add-city{
+			width: 125px;
+		}
 		.select.has-success{
 			border: 1px solid #68c04a;
 		}
@@ -234,6 +237,10 @@
 		p{
 			.input-text{
 				border: 1px solid #ccc;
+			}
+			.errTips {
+				background: url('img/warning.png') no-repeat left center;
+				padding-left: 24px;
 			}
 		}
 	}
