学习中心首页

--- a/source/widget/UserHome.courses/courseStudycenter.less
+++ b/source/widget/UserHome.courses/courseStudycenter.less
@@ -327,6 +327,9 @@ body{
 				p.teacher-coach{
 					font-size: 14px;
 					font-family: "Microsoft YaHei";
+					height: 20px;
+					overflow: hidden;
+					width: 76px;
 				}
 				p.teacher-majar{
 					color: #999;
