学习中心首页

--- a/source/widget/Public.Module/courses.less
+++ b/source/widget/Public.Module/courses.less
@@ -663,8 +663,7 @@ ul,li{list-style: none;}
 				.level-l {
 					float: left;
 					overflow: hidden;
-					text-align: right;
-					width: 160px;
+					text-align: center;
 					margin: 0;
 					li {
 						display: inline-block;
