--- a/source/widget/Mall.courseInfo/ui-course-info.less
+++ b/source/widget/Mall.courseInfo/ui-course-info.less
@@ -113,7 +113,7 @@
 		// 课程信息汇总----中间
 
 	.course-center-list {
-	   width: 590px;overflow: hidden;height: 400px;margin-left: 10px;
+	   width: 590px;overflow: hidden;margin-left: 10px;
 	   h2.coures-name-title {
 	   		line-height: 180%;font-size: 16px;overflow: hidden;padding-left: 10px;margin:10px 0;
 	   }
@@ -196,25 +196,7 @@
                height: 80px;
            }
 	   }
-	   .course-button-list {
-	   	     overflow: hidden;
-	   		.button_apply {
-	   			width: 160px;height: 40px;font-size: 18px;border-radius: 2px;
-	   		}
-	   		.button_shop-cart {
-	   			width: 160px;height: 40px;font-size: 18px;border-radius: 2px;margin-right: 10px;
-	   		}
-			.collect {
-				 display: inline-block;background: url(img/icon_star.png) 0 2px no-repeat;padding-left:16px;margin:10px 0 0 20px;
-              a {
-               font-size: 14px;color: #333;
-              }
-               &.collect_current {background: url(img/icon_star_gray.png) 0 2px no-repeat;cursor: default;}
-            }
-            .open-listen-num {
-            	width: 70px;font-size: 18px;color: #e74c3c;background: url(img/icon_eye.png) 0 8px no-repeat;padding-left: 20px;margin-top:8px;
-            }
-	   }
+	  
 	   //直播回放样式
 	   &.course-video-back {
 			.course-content-text {height: 60px;}
@@ -227,12 +209,12 @@
 			}
 			//免费课样式
 			.open-course-list {
-				height: 280px;background: #fcfcfc;margin-bottom: 20px;overflow: hidden;padding-left: 10px;
+				height: 260px;background: #fcfcfc;margin-bottom: 20px;overflow: hidden;padding-left: 10px;
 				.open-course-title {
 					height: 40px;line-height: 40px;font-size: 12px;padding-top: 10px;
 				}
 				#open-outline {
-					height: 240px;overflow: auto;
+					height: 200px;overflow: auto;
 					.coures-label-info {
 						height: 50px;line-height: 50px;font-size: 14px;
 						span {
@@ -264,6 +246,25 @@
                         padding-top: 10px;
                 }
 			}	
+	   }
+         .course-button-list {
+	   	     overflow: hidden;
+	   		.button_apply {
+	   			width: 160px;height: 40px;font-size: 18px;border-radius: 2px;
+	   		}
+	   		.button_shop-cart {
+	   			width: 160px;height: 40px;font-size: 18px;border-radius: 2px;margin-right: 10px;
+	   		}
+			.collect {
+				 display: inline-block;background: url(img/icon_star.png) 0 2px no-repeat;padding-left:16px;margin:10px 0 0 20px;
+              a {
+               font-size: 14px;color: #333;
+              }
+               &.collect_current {background: url(img/icon_star_gray.png) 0 2px no-repeat;cursor: default;}
+            }
+            span.open-listen-num {
+            	width: 70px;font-size: 18px;color: #e74c3c;background: url(img/icon_eye.png) 0 8px no-repeat;padding-left: 20px;margin-top:8px;padding-top:0;
+            }
 	   }
 	}
 		// 主讲老师和辅导老师----右侧
