--- a/source/widget/Public.Module/courses.less
+++ b/source/widget/Public.Module/courses.less
@@ -665,6 +665,7 @@ ul,li{list-style: none;}
 					overflow: hidden;
 					text-align: center;
 					margin: 0;
+					width: 100%;
 					li {
 						display: inline-block;
 						img {
