--- a/source/widget/Mall.courseInfo/ui-course-info.less
+++ b/source/widget/Mall.courseInfo/ui-course-info.less
@@ -65,11 +65,15 @@
                         float: left;
                         display: inline;
                         margin: 22px 10px 0 0;
+                        overflow: hidden;
+                        outline: none;
                     }
                     &.next {
                         float: left;
                         display: inline;
                         margin: 22px 0 0 10px;
+                        overflow: hidden;
+                        outline: none;
                     }
                     em.icon {
                         display: inline-block;
@@ -196,7 +200,25 @@
                height: 80px;
            }
 	   }
-	  
+	   .course-button-list {
+	   	     overflow: hidden;
+	   		.button_apply {
+	   			width: 160px;height: 40px;font-size: 18px;border-radius: 2px;
+	   		}
+	   		.button_shop-cart {
+	   			width: 160px;height: 40px;font-size: 18px;border-radius: 2px;margin-right: 10px;
+	   		}
+			.collect {
+				 display: inline-block;background: url(img/icon_star.png) 0 2px no-repeat;padding-left:16px;margin:10px 0 0 20px;
+              a {
+               font-size: 14px;color: #333;
+              }
+               &.collect_current {background: url(img/icon_star_gray.png) 0 2px no-repeat;cursor: default;}
+            }
+            span.open-listen-num {
+            	width: 70px;font-size: 18px;color: #e74c3c;background: url(img/icon_eye.png) 0 8px no-repeat;padding-left: 20px;margin-top:8px;
+            }
+	   }
 	   //直播回放样式
 	   &.course-video-back {
 			.course-content-text {height: 60px;}
@@ -205,7 +227,9 @@
 				span.f-left {
 					 width: 75px;font-size: 12px;line-height: 25px; padding-left: 10px;padding-top:20px;
 				}
-                  
+                span.open-listen-num {
+                    width: 70px;font-size: 18px;padding-left: 20px;padding-top:0;
+                }
 			}
 			//免费课样式
 			.open-course-list {
@@ -246,25 +270,6 @@
                         padding-top: 10px;
                 }
 			}	
-	   }
-         .course-button-list {
-	   	     overflow: hidden;
-	   		.button_apply {
-	   			width: 160px;height: 40px;font-size: 18px;border-radius: 2px;
-	   		}
-	   		.button_shop-cart {
-	   			width: 160px;height: 40px;font-size: 18px;border-radius: 2px;margin-right: 10px;
-	   		}
-			.collect {
-				 display: inline-block;background: url(img/icon_star.png) 0 2px no-repeat;padding-left:16px;margin:10px 0 0 20px;
-              a {
-               font-size: 14px;color: #333;
-              }
-               &.collect_current {background: url(img/icon_star_gray.png) 0 2px no-repeat;cursor: default;}
-            }
-            span.open-listen-num {
-            	width: 70px;font-size: 18px;color: #e74c3c;background: url(img/icon_eye.png) 0 8px no-repeat;padding-left: 20px;margin-top:8px;padding-top:0;
-            }
 	   }
 	}
 		// 主讲老师和辅导老师----右侧
