--- a/source/widget/UserHome.courses/courseStudycenter.less
+++ b/source/widget/UserHome.courses/courseStudycenter.less
@@ -838,18 +838,30 @@ table tr.even, table tr.alt, table tr:nth-of-type(2n){
 	text-align: center;
 	margin: 3px 0 0 20px;
 	position: relative;
-	width: 100px;
+	width: 113px;
 }
 .processingbar font {
 	color: #999;
 	display: block;
-	width: 100px;
-	height: 100px;
-	line-height: 100px;
+	width: 113px;
+	height: 113px;
+	line-height: 113px;
 	font-size: 26px;
 	text-align: center;
 	position: absolute;
 	left: 0;
 	top: 0;
 	margin: 0px 0 0 0px;
+	z-index: 1;
+}
+.processingbar_bg{
+	position: absolute;
+	width: 82px;
+	height: 82px;
+	left: 50%;
+	top: 50%;
+	margin-left: -41px;
+	margin-top: -43px;
+	background: #f5f5f5;
+	border-radius: 50%;
 }
