Signed-off-by: duxinlixiaoxue <1207931454@qq.com>

--- a/source/widget/Public.Dynamic/fresh.less
+++ b/source/widget/Public.Dynamic/fresh.less
@@ -67,6 +67,9 @@
   border-bottom:1px solid #eaeaea;
   padding:12px;
   overflow:hidden;
+  .f_blue{
+      color: @blue-color;
+  }
   em,i{
     font-style: normal;
   }
