Signed-off-by: duxinlixiaoxue <1207931454@qq.com>

--- a/source/widget/Public.Dynamic/fresh.less
+++ b/source/widget/Public.Dynamic/fresh.less
@@ -144,6 +144,11 @@
                  &:hover{
                    text-decoration: underline;
                  }
+                 .fresh-add-attention-btn{
+                    &:hover{
+                       text-decoration: none;
+                     }
+                 }
              }
              .fresh-course-line {
                 float: left;
