Signed-off-by: duxinlixiaoxue <1207931454@qq.com>

--- a/source/widget/Public.Dynamic/fresh.less
+++ b/source/widget/Public.Dynamic/fresh.less
@@ -144,7 +144,7 @@
                  &:hover{
                    text-decoration: underline;
                  }
-                 .fresh-add-attention-btn{
+                 &.fresh-add-attention-btn{
                     &:hover{
                        text-decoration: none;
                      }
