--- a/source/widget/UserHome.courses/courseStudycenter.less
+++ b/source/widget/UserHome.courses/courseStudycenter.less
@@ -183,6 +183,12 @@ body{
 			.course-title-inner{
 				width: 92%;
 				float: left;
+				.course-label{
+					float: left;
+				}
+				.title-detail{
+					line-height: 21px;
+				}
 			}
 			.title-detail-gray{
 				color: #999;
@@ -838,14 +844,14 @@ table tr.even, table tr.alt, table tr:nth-of-type(2n){
 	text-align: center;
 	margin: 3px 0 0 20px;
 	position: relative;
-	width: 113px;
+	width: 100px;
 }
 .processingbar font {
 	color: #999;
 	display: block;
-	width: 113px;
-	height: 113px;
-	line-height: 113px;
+	width: 100px;
+	height: 100px;
+	line-height: 100px;
 	font-size: 26px;
 	text-align: center;
 	position: absolute;
@@ -855,13 +861,13 @@ table tr.even, table tr.alt, table tr:nth-of-type(2n){
 	z-index: 1;
 }
 .processingbar_bg{
-	position: absolute;
-	width: 82px;
-	height: 82px;
-	left: 50%;
-	top: 50%;
-	margin-left: -41px;
-	margin-top: -43px;
 	background: #f5f5f5;
 	border-radius: 50%;
+	height: 76px;
+	left: 50%;
+	margin-left: -38px;
+	margin-top: -40px;
+	position: absolute;
+	top: 50%;
+	width: 76px;
 }
