--- a/source/widget/UserHome.courses/courseStudycenter.less
+++ b/source/widget/UserHome.courses/courseStudycenter.less
@@ -41,7 +41,7 @@ body{
 	text-align: center;
 	display: inline-block;
 	position: absolute;
-	right: 0px;
+	right: -25px;
 	color: #fff;
 	font-size: 14px;
 	font-style: normal;
@@ -73,6 +73,11 @@ body{
 }
 .courseList-label{
 	padding-right: 25px;
+	padding: 15px 0px 15px 15px;
+	margin-bottom: 20px;
+	background: #fff;
+	height: 215px;
+	border-radius: 4px;
 }
 .courselayout-list{
 
@@ -98,7 +103,6 @@ body{
 }
 .courseList-wrap{
 	clear: both;
-	overflow: hidden;
 	position: relative;
 	.course-btn-gray,.course-btn-gray[disabled]{
 		background: #ccd1d9;
@@ -133,14 +137,9 @@ body{
 	}
 }
 .courseList {
-	background: #fff;
-	border-radius: 4px;
 	display: block;
 	font-family: "SimSun";
 	height: auto;
-	margin-bottom: 20px;
-	overflow: hidden;
-	padding: 15px 0px 15px 15px;
 	table,tr,th,thead{margin: 0;padding: 0;}
 	ul,li,p{margin: 0;list-style: none;padding: 0}
 	.left{float: left;}
@@ -167,7 +166,7 @@ body{
 	.courseList-body{
 		display: block;
 		overflow: hidden;
-		padding: 0 0px 0 10px;
+		padding: 0 0px 0 17px;
 		.course-center{
 			width: 69%;
 		}
@@ -202,6 +201,7 @@ body{
 				float: right;
 				margin-right: 10px;
 				font-family: "SimSun";
+				line-height: 21px;
 			}
 			.change-course{
 				color: #e74c3c;
@@ -265,7 +265,7 @@ body{
 		}
 		.more-service{
 			margin-right: 10px;
-			margin-top: 3px;
+			margin-top: 4px;
 			h4{
 				color: #333333;
 				font-size: 12px;
@@ -300,14 +300,14 @@ body{
 		}
 	}
 	.courseList-teacher{
-		height: 170px;
+		height: 188px;
 		border-left: 1px solid @borderColor;
 		width: 181px;
 		float: left;
 		padding: 5px 5px;
 		position: relative;
 		.teacher-main{
-			padding: 12px;
+			padding: 16px 12px;
 			overflow: hidden;
 			float: left;
 			width: 170px;
@@ -842,32 +842,34 @@ table tr.even, table tr.alt, table tr:nth-of-type(2n){
 // 进度条
 .processingbar {
 	text-align: center;
-	margin: 3px 0 0 20px;
+	margin: 3px 0 0 5px;
 	position: relative;
-	width: 100px;
 }
 .processingbar font {
 	color: #999;
 	display: block;
-	width: 100px;
-	height: 100px;
-	line-height: 100px;
-	font-size: 26px;
+	width: 112px;
+	height: 112px;
+	line-height: 112px;
+	font-size: 24px;
 	text-align: center;
 	position: absolute;
-	left: 0;
-	top: 0;
-	margin: 0px 0 0 0px;
+	left: 50%;
+	top: 50%;
+	margin: 0px;
 	z-index: 1;
+	font-family: "Microsoft Yahei";
+	margin-left: -56px;
+	margin-top: -56px;
 }
 .processingbar_bg{
 	background: #f5f5f5;
 	border-radius: 50%;
-	height: 76px;
+	height: 91px;
 	left: 50%;
-	margin-left: -38px;
-	margin-top: -40px;
+	margin-left: -46px;
+	margin-top: -48px;
 	position: absolute;
 	top: 50%;
-	width: 76px;
+	width: 91px;
 }
