--- a/source/widget/UM.head.photo/head.photo.less
+++ b/source/widget/UM.head.photo/head.photo.less
@@ -166,11 +166,8 @@
                 }
                 em{
                     position: absolute;
-                    display: block;
                     top: 212px;
                     left: 35px;
-                    font-style: normal;
-                    font-family: "Microsoft YaHei";
                     font-size: 16px;
                     color: #e74c3c;
                 }
@@ -181,6 +178,12 @@
                     font-family: "SimSun";
                     font-size: 12px;
                     color: #666;
+                }
+                p{
+                    position: relative;
+                    top: 45px;
+                    left: 120px;
+                    color: #e74c3c;
                 }
             }
             .hpl-btn{
