--- a/source/widget/Public.Module/courses.less
+++ b/source/widget/Public.Module/courses.less
@@ -163,6 +163,7 @@ ul,li{list-style: none;}
 				float: left;
 				strong{
 					color: #e74c3c;
+					font-weight: normal;
 				}
 			}
 			span:first-child{
