--- a/source/widget/UserHome.learning/study-course.less
+++ b/source/widget/UserHome.learning/study-course.less
@@ -550,7 +550,7 @@
   margin: 5px 20px;
 }
 .wrong_list_new .wrong_list_anwser p {
-  padding-left: 30px;
+  padding-left: 0;
 }
 .wrong_list_new .wrong_list_anwser strong {
   color: #000;
@@ -604,6 +604,6 @@
   width: 780px;
 }
 .class_answer .wrong_list_new span {
-  margin: 0 20px;
+  margin: 0;
   font-size: 14px;
 }
