课程里列表

--- a/source/widget/Public.Module/courses.less
+++ b/source/widget/Public.Module/courses.less
@@ -787,8 +787,8 @@ ul,li{list-style: none;}
 			}
 		}
 	}
-	li.popular-rank {
-		border-left: none;
+	li.popular-rank.active {
+		border-left: 1px solid #fcfcfc
 	}
 	li.active{
 		border-right: 1px solid #eaeaea;
