学习中心首页更改

--- a/source/widget/UserHome.courses/courseStudycenter.less
+++ b/source/widget/UserHome.courses/courseStudycenter.less
@@ -178,6 +178,10 @@ body{
 			span{
 				color: #999;
 			}
+			.title-detail{
+				margin-left: 5px;
+				line-height: 21px;
+			}
 			.course-title-inner{
 				width: 92%;
 				float: left;
@@ -209,7 +213,7 @@ body{
 			}
 		}
 		.title-more{
-			margin-top: 42px;
+			margin-top: 39px;
 			font-size: 14px;
 		}
 		.end-time{
@@ -399,7 +403,7 @@ body{
 
 .courseList.courseList-record{
 	.courseList-body .title-more{
-		margin-top: 67px;
+		margin-top: 64px;
 	}
 }
 // 弹框
