Signed-off-by: Ge-yuan-jun <daydaygyj@gmail.com>

--- a/source/widget/Public.Selector/selector.less
+++ b/source/widget/Public.Selector/selector.less
@@ -1,8 +1,8 @@
 @charset "UTF-8";
 
-@Nfont-size:1.4rem;
-@Sfont-size:1rem;
-@LRpadding:0.8rem;
+@Nfont-size:14px;
+@Sfont-size:10px;
+@LRpadding:8px;
 
 /* 年级以及知识点选择css(start) */
 .choiceSet{
@@ -13,14 +13,14 @@
 .choiceSetting{
   display: inline-block;
   border-radius: 2px;
-  padding:0.4rem 0.8rem;
+  padding:4px 8px;
 }
 .choiceTip{
   color:@grey;
 //  font-size: 1.2rem;
   padding:12px 12px 12px 0;
   text-align: center;
-  width:6rem;
+  width:60px;
   font-weight: normal;
 };
 
@@ -64,9 +64,9 @@
         }
         .choice-items{//右侧选项
             cursor: pointer;
-            height:3.0rem;
-            padding-top: 1rem;
-            padding-bottom: 1rem;
+            height:30px;
+            padding-top: 10px;
+            padding-bottom: 10px;
             .choice-item-each{//单个选项
                 
                 line-height: 1;
@@ -78,20 +78,20 @@
             
         }
         .choice-items-input{
-            padding-top: 1.2rem;
-            padding-bottom: 1.2rem;
+            padding-top: 12px;
+            padding-bottom: 12px;
             
         }
         .choice-more{//更多知识点
             .choice-more-download{
                 cursor: pointer;
                 padding: 0;
-                width:9rem;
+                width:90px;
                 a{
                     font-weight: normal;
                     display: inline-block;
-                    margin:1.1rem 0 1.1rem 0;
-                    padding:0.2rem 0.5rem;
+                    margin:15px 0 15px 0;
+                    padding:2px 5px;
                 }    
             }
             
@@ -99,20 +99,20 @@
         
     }
     .filter{//"根据以上条件筛选按钮"
-            margin-top:0.5rem;
-            margin-bottom: 0.5rem;
+            margin-top:5px;
+            margin-bottom: 5px;
             position: relative;
             left:45%;
     }
     .choice-special{//知识点选择（特殊情况加类名）
         .choice-title{//三个字，加文字间距
-            letter-spacing: 0.3rem;
+            letter-spacing: 3px;
         }
         .choice-items-spe{//普通情况下的
 //            overflow: hidden;
 //            height:2rem;
-            margin-top: 1rem;
-            margin-bottom: 1rem;
+            margin-top: 10px;
+            margin-bottom: 10px;
             max-height:98px;
             overflow: auto;
             .choice-item-each{
@@ -122,13 +122,13 @@
                 cursor: pointer;
             }
             .radio-inline{
-                margin-bottom: 1rem;
+                margin-bottom: 10px;
                 margin-left: 0;
                 margin-right: 10px;
             }
         }
         .choice-items-spe-input{//input框所添加的特殊类名
-            margin-top: 1.2rem;
+            margin-top: 12px;
             margin-bottom: 0;
             max-height:88px;
             overflow: auto;
@@ -138,10 +138,10 @@
         }
         .choice-items-open{
             overflow: auto;
-            height: 8rem;
+            height: 80px;
         }
     }
 }
 .chooseGradeForLb{
-    margin-bottom: 2rem;
+    margin-bottom: 20px;
 }
