--- a/source/widget/UM.Nav/nav.less
+++ b/source/widget/UM.Nav/nav.less
@@ -1,22 +1,22 @@
     .user-manage-side {
         width: 130px;
-        padding-left: 10px;
+        padding: 8px 0 0 10px;
         #side-nav {
-            //            height: 585px;
             margin: 0;
-            //            list-style: none;
             li {
                 height: 24px;
                 line-height: 24px;
+                a{
+                    color: #666;
+                }
                 .current {
                     color: #3bafda;
                     font-weight: bold;
                 }
                 &.nav-header {
                     margin: 20px 0 0 0;
-                    //                    color: #333;
-                    //                    font-size: 12px;
                     font-weight: bold;
+                    color: #222;
                 }
                 &:first-child {
                     margin-top: 0;
@@ -37,6 +37,7 @@
                     margin: 0;
                     font-size: 16px;
                     line-height: 29px;
+                    color: #666;
                 }
             }
             .panel-body {
