商城课程列表

--- a/source/widget/Public.Module/courses.less
+++ b/source/widget/Public.Module/courses.less
@@ -148,6 +148,7 @@ ul,li{list-style: none;}
 	.course-detail{
 		display: block;
 		overflow: hidden;
+		margin-bottom: 0;
 		p{
 			line-height: 30px;
 			overflow: hidden;
