--- a/source/widget/UserHome.header/homeHeader.less
+++ b/source/widget/UserHome.header/homeHeader.less
@@ -9,6 +9,11 @@ body {
     //    .container {
     //        width: 1050px;
     //    }
+    .userHome-header{
+        height:64px;
+        width:64px;
+        border-radius: 50%;
+    }
     .user-avatar {
         margin-right: 10px;
     }
