--- a/source/widget/Mall.FindTeacher/find-teacher.less
+++ b/source/widget/Mall.FindTeacher/find-teacher.less
@@ -11,11 +11,11 @@
 .find-teacher-rank-title{width: @width;height: 38px;font-size: @fs12;border: @borderea;background-color: #fcfcfc;margin-top: 20px;}
 .find-teacher-rank-focus {color: #1e89e0;}
 .find-teacher-rank-title .glyphicon{top: 2px;}
-.find-teacher-rank-title div{float: left;width: 65px;height: 36px;background-color: #fff;text-align: center;padding-top: @pt;margin-right: 3px;border-right: @borderea;}
-.find-teacher-rank-title span{padding-left: 27px;padding-top: @pt;display: inline-block;}
+.find-teacher-rank-title div{float: left;width: 65px;height: 36px;background-color: #fff;text-align: center;line-height:36px;margin-right: 3px;border-right: @borderea;}
+.find-teacher-rank-num{display: inline-block;width: 65px;height: 36px;text-align: center;line-height: 36px;}
 .find-teacher-rank-title span img{margin-left: 5px;}
 .find-teacher-intro{line-height: 0;font-size: 0;}
-.find-teacher-account{float:right;color: @c9;em{color: #e74c3c;font-style: normal;}margin-right: 15px;}
+.find-teacher-account{padding-left: 27px;padding-top: @pt;display: inline-block;float:right;color: @c9;em{color: #e74c3c;font-style: normal;}margin-right: 15px;}
 .find-teacher-list-container{overflow: hidden;width: 100%;margin-top: -1px;margin-bottom: -1px;}
 .find-teacher-list .find-teacher-card:nth-child(4){border-right:0}
 .find-teacher-card{width:25%;border-right: @borderf6;border-bottom: @borderf6;float: left;}
