Signed-off-by: Ge-yuan-jun <daydaygyj@gmail.com>

--- a/source/widget/Mall.personCenter/personalCenter.less
+++ b/source/widget/Mall.personCenter/personalCenter.less
@@ -268,15 +268,17 @@
         }
         .center-info-fans-num {
             margin: 0 auto;
-            width: 75px;
+            width: 110px;
             height: 18px;
             overflow: hidden;
+            margin: 0 auto;
         }
+        width: 120px;
     }
     .center-info-newThing {
         .center-info-all;
         .center-info-newThing-num {
-            width: 76px;
+            width: 110px;
             height: 18px;
             margin: 0 auto;
             overflow: hidden;
@@ -284,6 +286,7 @@
         .center-info-newThing-name {
             color: @wordColor;
         }
+        width: 120px;
     }
     .center-info-stud {
         .center-info-all;
