学习中心引导页

--- a/source/widget/Public.Module/glory.less
+++ b/source/widget/Public.Module/glory.less
@@ -28,6 +28,10 @@
 		}
 	} 
 }
+.glory-content-wrap{
+	margin-top: 15px;
+	overflow: hidden;
+}
 .none-content{
 	float: left;
 	position: relative;
