--- a/source/widget/UserHome.courses/courseStudycenter.less
+++ b/source/widget/UserHome.courses/courseStudycenter.less
@@ -879,7 +879,7 @@ table tr.even, table tr.alt, table tr:nth-of-type(2n){
 	width: 91px;
 }
 /*新用户引导*/
-.shade_scroll{overflow-y: hidden;}
+.shade_scroll{overflow-y: hidden;background: #f1f2f6 ;}
 .guidance_wrap {width: 100%;height:1979px; overflow: hidden;position: absolute;left: 0px;top:0px; z-index: 200;}
 .guidance_wrap .guidance_bg {width:1190px;height:1979px;margin:0 auto;overflow:hidden;background: url("img/guide_bg.jpg") no-repeat;} 
 .guidance_wrap .guidance_mask {width:100%;height:1979px;background: #000; opacity: 0.6;filter:alpha(opacity=60);position: absolute;left:0;top:-1px; z-index: 250;}
