--- a/source/widget/Mall.FindTeacher/find-teacher.less
+++ b/source/widget/Mall.FindTeacher/find-teacher.less
@@ -11,8 +11,8 @@
 .find-teacher-rank-title{width: @width;height: 38px;font-size: @fs12;border: @borderea;background-color: #fcfcfc;margin-top: 20px;}
 .find-teacher-rank-focus {color: #1e89e0;}
 .find-teacher-rank-title .glyphicon{top: 2px;}
-.find-teacher-rank-title div{float: left;width: 65px;height: 36px;background-color: #fff;text-align: center;line-height:36px;margin-right: 3px;border-right: @borderea;}
-.find-teacher-rank-num{display: inline-block;width: 65px;height: 36px;text-align: center;line-height: 36px;}
+.find-teacher-rank-title div{float: left;width: 65px;height: 36px;text-align: center;line-height:36px;}
+.find-teacher-rank-num{display: inline-block;width: 65px;height: 36px;text-align: center;line-height: 36px;border-left: 1px solid #eaeaea;}
 .find-teacher-rank-title span img{margin-left: 5px;}
 .find-teacher-intro{line-height: 0;font-size: 0;}
 .find-teacher-account{padding-left: 27px;padding-top: @pt;display: inline-block;float:right;color: @c9;em{color: #e74c3c;font-style: normal;}margin-right: 15px;}
@@ -45,4 +45,6 @@
 .findRightList{margin-bottom: 20px;}
 .findRightTitle{font-size: 16px;color: #666;display: inline-block;margin-bottom: 10px;}
 .find-teacher-list{overflow: hidden;border: 1px solid #eaeaea;margin-top: -1px;}
+.find-teacher-rank-by{background-color:#fff;border-right:1px solid #eaeaea;}
+.find-teacher-rank-by:nth-child(1){border-right:0;}
 //.row{margin: 0;}
