找老师样式

--- a/source/widget/Mall.FindTeacher/find-teacher.css
+++ b/source/widget/Mall.FindTeacher/find-teacher.css
@@ -31,6 +31,7 @@
   display: inline-block;
   width: 65px;
   height: 36px;
+  margin-left: -1px;
   text-align: center;
   line-height: 36px;
   border-left: 1px solid #eaeaea;
@@ -185,6 +186,6 @@
   background-color: #fff;
   border-right: 1px solid #eaeaea;
 }
-.find-teacher-rank-by:nth-child(0) {
+.find-teacher-rank-by .find-teacher-rank-by:nth-child(1) {
   border-right: 0;
 }
