--- a/source/widget/UserHome.courses/courseStudycenter.less
+++ b/source/widget/UserHome.courses/courseStudycenter.less
@@ -843,6 +843,9 @@ table tr.even, table tr.alt, table tr:nth-of-type(2n){
 			}
 		}
 	}
+	.popover.top {
+		margin-top: -13px;
+	}
 }
 // 进度条
 .processingbar {
@@ -892,7 +895,7 @@ table tr.even, table tr.alt, table tr:nth-of-type(2n){
 			overflow: hidden;position: absolute; display: none;
 			.btns_next {display: block; width: 62px;height: 23px; position: absolute;background:#3bafda; right:20px;bottom:22px;border-radius: 2px;line-height: 23px;text-align: center;color: #fff;&:focus{outline: none;}}
 			.btns_finish {
-						display: block; width:63px;height: 23px; position: absolute;background: #e74c3c; right:83px;bottom:14px;border-radius: 2px;line-height: 23px;text-align: center;color: #fff;&:focus{outline: none;}
+				display: block; width:63px;height: 23px; position: absolute;background: #e74c3c; right:83px;bottom:14px;border-radius: 2px;line-height: 23px;text-align: center;color: #fff;&:focus{outline: none;}
 			}
 		}
 		.step_item_1 {
