--- a/source/widget/Mall.personCenter/personalCenter.less
+++ b/source/widget/Mall.personCenter/personalCenter.less
@@ -327,6 +327,47 @@
             overflow: hidden;
         }
     }
+    .center-info-fans-th{
+        .center-info-all;
+          border-right: 1px solid rgb(217, 217, 217);
+        margin-bottom: 8px;
+        .center-info-fans-num{
+            width: 75px;
+            height: 18px;
+            margin: 0 auto;
+            overflow: hidden;
+        }
+        .center-info-fans-name{
+            color:@wordColor;
+        }
+    }
+    .center-info-newThing-th{
+        .center-info-all;
+        margin-bottom: 8px;
+        .center-info-newThing-num{
+            width: 70px;
+            height: 18px;
+            margin: 0 auto;
+            overflow: hidden;
+        }
+        .center-info-newThing-name{
+            color:@wordColor;
+        }
+    }
+    .center-info-stud-th{
+        .center-info-all;
+          border-left: 1px solid rgb(217, 217, 217);
+        margin-bottom: 8px;
+        .center-info-stud-name{
+            color:@wordColor;
+        }
+        .center-info-stud-num{
+            width: 70px;
+            height: 18px;
+            margin: 0 auto;
+            overflow: hidden;
+        }
+    }
 }
 
 
