--- a/source/widget/UserHome.header/homeHeader.less
+++ b/source/widget/UserHome.header/homeHeader.less
@@ -27,6 +27,7 @@ body {
             line-height: 18px;
             margin-top: 10px;
             margin-bottom: 10px;
+            max-width: 280px;
         }
         .mycenter-link {
             display: block;
