Signed-off-by: Ge-yuan-jun <daydaygyj@gmail.com>

--- a/source/widget/Mall.personCenter/personalCenter.less
+++ b/source/widget/Mall.personCenter/personalCenter.less
@@ -435,10 +435,12 @@
     }
     .center-teacher-intro {
         height: 54px;
+        width: 250px;
         line-height: 54px;
         padding-left: 40px;
         color: rgb(153, 153, 153);
         background: url("img/school.png") no-repeat 15px 15px;
+        overflow: hidden;
     }
 }
 
