Signed-off-by: Ge-yuan-jun <daydaygyj@gmail.com>

--- a/source/widget/Mall.personCenter/personalCenter.less
+++ b/source/widget/Mall.personCenter/personalCenter.less
@@ -636,6 +636,11 @@
             width: 40px;
             height: 35px;
             border-radius: 50%;
+            .photo{
+                width: 40px;
+                height:40px;
+                border-radius:50%;
+            }
         }
         .rank-name {
             float: left;
