--- a/source/widget/Mall.personCenter/personalCenter.less
+++ b/source/widget/Mall.personCenter/personalCenter.less
@@ -607,6 +607,7 @@
         border-bottom: 1px solid #eaeaea;
         .rank-number {
             float: left;
+            padding-top: 5px;
             .number1 {
                 background: rgb(231, 71, 60);
             }
