--- a/source/widget/UserHome.notice/notice.less
+++ b/source/widget/UserHome.notice/notice.less
@@ -31,10 +31,12 @@
              }
              a{
                 display:block;
-                width:60px;
-                height:60px;
-                overflow:hidden;
-                border-radius:50%;
+                img{
+                    width:60px;
+                    height:60px;
+                    overflow:hidden;
+                    border-radius:50%;
+                }
              }
         }
         .notice-text{
